# meta2bseek

./: Cargo.toml  README.md  e.fasta  e.syldb
2bRAD-results/: EC590_K12_1.BcgI.stat.xls
example_data/Cutibacterium_acnes_0.005/ground_truth/: 3_Cutibacterium_acnes_0.005.txt_sequence_abd.txt
example_data/Cutibacterium_acnes_0.005/ref_genome/: GCF_000144505.1_ASM14450v1_genomic.fna  GCF_000144545.1_ASM14454v1_genomic.fna  GCF_000144715.1_ASM14471v1_genomic.fna  GCF_002572745.1_ASM257274v1_genomic.fna  GCF_002775655.1_ASM277565v1_genomic.fna  GCF_002775735.1_ASM277573v1_genomic.fna  GCF_005774145.1_ASM577414v1_genomic.fna  GCF_008868325.1_ASM886832v1_genomic.fna  GCF_018918785.1_ASM1891878v1_genomic.fna  GCF_021496625.1_ASM2149662v1_genomic.fna  GCF_023718445.1_ASM2371844v1_genomic.fna  GCF_024328285.1_ASM2432828v1_genomic.fna  GCF_024328905.1_ASM2432890v1_genomic.fna  GCF_024329025.1_ASM2432902v1_genomic.fna
src/: .n.swp  avx2_seeding.rs  cmdline.rs  constants.rs  contain.rs  extract.rs  extract_2brad.rs  inference.rs  inspect.rs  inspect_module.rs  lib.rs  main.rs  mark.rs  profile_module.rs  query.rs  query_module.rs  sketch.rs  types.rs  view.rs
test_files/: simulate_sample.sh
test_results/: EC590_K12_1.sylsp  EC590_K12_2.sylsp
