[package]
name = "Meta2bSeek"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"       # Add this
regex = "1.10"       # Add this
anyhow = "1.0"       # Make sure you have this
clap = { version = "4.5", features = ["derive"] }
bio = "1.1"          # Make sure you have this
rayon = "1.10"       # Make sure you have this
env_logger = "0.9"
log = "0.4"
tikv-jemallocator = { version = "0.5", optional = true }

# 其他已有依赖保持不变（bio/flate2等）