[package]
name = "meta2bseek"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"       # Add this
regex = "1.10"       # Add this
anyhow = "1.0"       # Make sure you have this
clap = { version = "4.5.4", features = ["derive"] }
bio = "1.1"          # Make sure you have this
rayon = "1.10"       # Make sure you have this
env_logger = "0.9"
log = "0.4"
tikv-jemallocator = "0.5.4"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
glob = "0.3"
serde_yaml = "0.9"
fxhash = "0.2.1"
itertools = "0.11.0"
memory-stats = "1"
scalable_cuckoo_filter = "0.2.0"
needletail = "0.5"
simple_logger = "4.3.3"

[profile.release]
debug = true
